Refactor to create index resource
